[package]
name = "aralez"
version = "0.92.10"
edition = "2021"
build = "src/build.rs"
license = "Apache-2.0"
description = "Reverse proxy built on top of Cloudflare's Pingora"
exclude = ["configs/*"]
repository = "https://github.com/sadoyan/aralez"

[package.metadata.winresource]
LegalCopyright = "Copyright (c) 2026 @sadoyan and contributors"
FileDescription = "Aralez (Արալեզ) Reverse proxy built on top of Cloudflare's Pingora"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1

[build-dependencies]
winresource = "0.1.31"

[workspace]
members = [
  "default_interface",
  "custom_logger"
]

[workspace.dependencies]
ahash = "0.8.12"
arc-swap = "1.9.1"
async-trait = "0.1.89"
axum = { version = "0.8.9" }
base16ct = { version = "1.0.0", features = ["alloc"] }
base64 = "0.22.1"
ctrlc = "3.5.2"
dashmap = "7.0.0-rc2"
futures = "0.3.32"
instant-acme = "0.8.5"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto", "use_pem"] }
mimalloc = { version = "0.1.52", default-features = false }
moka = { version = "0.12.15", features = ["sync"] }
notify = "9.0.0-rc.4"
pingora = { version = "0.8.0", features = ["lb", "boringssl"] }  # openssl, rustls, boringssl
pingora-core = "0.8.0"
pingora-http = "0.8.0"
pingora-limits = "0.8.0"
pingora-proxy = "0.8.0"
noyalib = { version = "0.0.7", features = ["compat-serde-yaml"] }
privdrop = "0.5.6"
prometheus = "0.14.0"
rand = "0.10.1"
rcgen = "0.14.8"
reqwest = { version = "0.13.4", features = ["blocking", "json", "stream"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.11.0-rc.5", default-features = false }
signal-hook = "0.4.4"
subtle = "2.6.1"
tikv-jemalloc-ctl = { version = "0.7.0", features = ["stats"] }
tikv-jemallocator = "0.7.0"
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = { version = "0.1.44", features = ["release_max_level_info"] }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["chrono", "env-filter"]}
urlencoding = "2.1.3"
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_System_ProcessStatus"] }
x509-parser = "0.18.1"

[dependencies]
custom-logger = { path = "custom_logger", optional = true }
default-interface = { path = "default_interface"}
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base16ct = { workspace = true }
base64 = { workspace = true }
ctrlc = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
instant-acme = { workspace = true }
jsonwebtoken = { workspace = true }
mimalloc = { workspace = true }
moka = { workspace = true }
notify = { workspace = true }
noyalib = { workspace = true }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-http = { workspace = true }
pingora-limits = { workspace = true }
pingora-proxy = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
signal-hook = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
x509-parser = { workspace = true }

[target.'cfg(unix)'.dependencies]
privdrop = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[features]
custom-logger = ["dep:custom-logger"]
default = []
full = ["custom-logger"]
